--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Hauptstraße 1A, 63303 Dreieich <br><p class="bodytext"><strong>Telefon:</strong> 01579-26438-50<br> <strong>E-Mail:</strong> <a href="mailto:info@kammerjaeger-faulhaber.de">info@kammerjaeger-faulhaber.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Steve Faulhaber
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Adresse:</strong><br> Hauptstraße 1A, 63303 Dreieich <br><p class="bodytext"><strong>Telefon:</strong> 01579-26438-50<br> <strong>E-Mail:</strong> <a href="mailto:info@kammerjaeger-faulhaber.de">info@kammerjaeger-faulhaber.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Steve Faulhaber
   
   
   
